cmake_minimum_required (VERSION 3.11)
project (cppbor)

set(CMAKE_CXX_COMPILER /Library/Developer/CommandLineTools/usr/bin/clang++)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_FLAGS "-Wno-reorder")
include_directories(SYSTEM /Library/Developer/CommandLineTools/usr/include/c++/v1)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
link_directories(/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib)
set(CMAKE_EXE_LINKER_FLAGS "-lc++ -lcppunit")

file(GLOB test_sources cppbor/test_sources/*)
file(COPY ${test_sources} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(cppbor cppbor/main cppbor/cppbor)
set(CMAKE_BUILD_TYPE Release)
