cmake_minimum_required (VERSION 3.11)
project (cppbor)

set(CMAKE_CXX_COMPILER /Library/Developer/CommandLineTools/usr/bin/clang++)
set(CMAKE_CXX_STANDARD 17)
include_directories(SYSTEM /Library/Developer/CommandLineTools/usr/include/c++/v1)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
link_directories(/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib)

file(GLOB test_sources cppbor/test_sources/*)
file(COPY ${test_sources} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(cppbor cppbor/main cppbor/cppbor)
target_link_libraries(cppbor c++ cppunit)
add_executable(bench bench.cpp cppbor/cppbor)
target_link_libraries(bench c++)
set(CMAKE_BUILD_TYPE Release)
